--- a/index.html
+++ b/index.html
@@ -1,62 +1,34 @@
+<link rel="stylesheet" href="style.css">
 <div class="wrapper">
     <div class="card">
-      <input type="checkbox" id="aero" class="more">
+      <input type="checkbox" id="card1" class="more" aria-hidden="true">
       <div class="content">
-      <div class="front" style="background-image: url('https://static.vecteezy.com/system/resources/previews/046/250/365/non_2x/light-path-neon-light-movement-neon-light-movement-abstract-free-photo.jpg')">
-  
+        <div class="front" style="background-image: url('https://picsum.photos/id/1039/1200/800')">
           <div class="inner">
             <h2>AeroBeats Pro</h2>
             <div class="rating">
-              <i class="fas fa-bolt"></i>
-              <i class="fas fa-satellite-dish"></i>
-              <i class="fas fa-wave-square"></i>
-              <i class="fas fa-volume-up"></i>
+              ★ ★ ★ ★ ☆
             </div>
-            <label for="aero" class="button" aria-hidden="true">
-              Discover
-            </label>
+            <label for="card1" class="button">Discover</label>
           </div>
         </div>
-  
-       
+
         <div class="back">
           <div class="inner">
             <div class="info-row">
-              <div class="info">
-                <span>90h</span>
-                <i class="fas fa-battery-full"></i>
-                <span>Playtime</span>
-              </div>
-              <div class="info">
-                <span>Hi-Fi</span>
-                <i class="fas fa-headphones-alt"></i>
-                <span>Sound</span>
-              </div>
-              <div class="info">
-                <span>ANC</span>
-                <i class="fas fa-volume-mute"></i>
-                <span>Cancel</span>
-              </div>
-              <div class="info">
-                <span>5.2</span>
-                <i class="fas fa-bluetooth-b"></i>
-                <span>BT ver</span>
-              </div>
+              <div class="info"><span>90h</span> Playtime</div>
+              <div class="info"><span>Hi-Fi</span> Sound</div>
+              <div class="info"><span>ANC</span> Cancel</div>
+              <div class="info"><span>5.2</span> BT ver</div>
             </div>
-  
             <div class="description">
-              <p>Experience a new wave of immersive sound with AeroBeats Pro. Powered by spatial audio, smart noise cancelation, and a magnetic case with LED charge indicator. Perfect for gaming, work, and travel.</p>
+              Experience a new wave of immersive sound with AeroBeats Pro. Powered by spatial audio, smart noise cancelation, and a magnetic case with LED charge indicator. Perfect for gaming, work, and travel.
             </div>
-  
             <div class="location">In Stock: Global</div>
             <div class="price">€199</div>
-  
-            <label for="aero" class="button return" aria-hidden="true">
-              <i class="fas fa-arrow-left"></i> Back
-            </label>
+            <label for="card1" class="button return">Back</label>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
