--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <div class="card">
       <input type="checkbox" id="card1" class="more" aria-hidden="true">
       <div class="content">
-        <div class="front" style="background-image: url('https://picsum.photos/id/1039/1200/800')">
+        <div class="front" style="background-image: url('https://static.vecteezy.com/system/resources/previews/046/250/365/non_2x/light-path-neon-light-movement-neon-light-movement-abstract-free-photo.jpg')">
           <div class="inner">
             <h2>AeroBeats Pro</h2>
             <div class="rating">
