--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<link rel="stylesheet" href="style.css">
-<div class="wrapper">
+
+
+  
+  <link rel="stylesheet" href="style.css">
+
+
+
+  <div class="wrapper">
     <div class="card">
       <input type="checkbox" id="card1" class="more" aria-hidden="true">
       <div class="content">
@@ -32,3 +38,6 @@
       </div>
     </div>
   </div>
+
+</body>
+</html>
