--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-  <div class="wrapper">
+ <link rel="stylesheet" href="style.css">
+<div class="wrapper">
     <div class="card">
       <input type="checkbox" id="card1" class="more" aria-hidden="true">
       <div class="content">
